--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "# https://georgeo4.github.io/george-assyrian-page/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "browserify index.js > bundle.js && live-server"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
